Trying something new with the calendar widget HOTFIX: Fixed the margins on the forecast causing a scrollbar to appear at the bottom of the screen

--- a/css/magic-mirror.css
+++ b/css/magic-mirror.css
@@ -127,3 +127,7 @@ body {
     border-width: 1px 0px;
     border-color: #606060;
 }
+
+.no-margin {
+    margin: 0px;
+}
